/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package com.loopring.lightcone.proto.eth;

///////////////////////////////////////////
//
//
//
///////////////////////////////////////////

message Address {
    string content = 1;
}

message Hash {
    string content = 1;
}

message Big {
    string content = 1;
}

message Hex {
    string content = 1;
}

message Transaction {
    Hash hash = 1;
    Big nonce = 2;
    Hash blockHash = 3;
    Big blockNumber = 4;
    Big transactionIndex = 5;
    Address from = 6;
    Address to =7;
    Big value = 8;
    Big gasPrice = 9 ;
    Big gas = 10;
    Hex input = 11;
    Hex r = 12;
    Hex s = 13;
    Hex v = 14;
}
